Закончил разметку страницы формы.

--- a/source/form.html
+++ b/source/form.html
@@ -23,9 +23,112 @@
 
   <main class="theme">
     <h1 class="visually-hidden">Cat Energy</h1>
-    <form class="program-set">
+    <form class="program-form" action="http://echo.htmlacademy.ru" method="post">
       <h2 class="theme-title">Подбор программы</h2>
-
+      <p class="program-form__text">
+        Заполните анкету и мы подберем программу питания для вашего кота
+      </p>
+      <fieldset class="program-form__group form-unit">
+        <legend class="form-unit__title visually-hidden">Личные данные кота</legend>
+        <p class="form-unit__row">
+          <label class="form-unit__item">
+            <span class="form-unit__label">Имя:*</span>
+            <input type="text" class="form-unit__input" name="Имя" placeholder="Барсик" required>
+          </label>
+        </p>
+        <p class="form-unit__row">
+          <label class="form-unit__item">
+            <span class="form-unit__label">Вес (кг):*</span>
+            <input type="number" class="form-unit__input" name="Вес" placeholder="7" required>
+          </label>
+        </p>
+        <p class="form-unit__row">
+          <label class="form-unit__item">
+            <span class="form-unit__label">Возраст (лет):</span>
+            <input type="number" class="form-unit__input" name="Возраст" placeholder="7">
+          </label>
+        </p>
+      </fieldset>
+      <fieldset class="program-form__group form-unit form-unit--separated">
+        <legend class="form-unit__title visually-hidden">Выбор программы</legend>
+        <ul class="form-unit__list">
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="radio" name="Программа" value="Похудение" class="form-unit__radio visually-hidden" checked>
+              <span class="form-unit__label form-unit__label--radio">Похудение</span>
+            </label>
+          </li>
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="radio" name="Программа" value="Набор массы" class="form-unit__radio visually-hidden">
+              <span class="form-unit__label form-unit__label--radio">Набор массы</span>
+            </label>
+          </li>
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="radio" name="Программа" value="Не знаю (Нужен ваш совет)" class="form-unit__radio visually-hidden">
+              <span class="form-unit__label form-unit__label--radio">Не знаю (Нужен ваш совет)</span>
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset class="program-form__group form-unit">
+        <legend class="form-unit__title">Контактные данные (владельца кота)</legend>
+        <p class="form-unit__row">
+          <label class="form-unit__item">
+            <span class="form-unit__label">E-mail:*</span>
+            <input type="email" class="form-unit__input form-unit__input--icon
+            form-unit__input--email" name="E-mail" placeholder="kuklachev@gmail.com" required>
+          </label>
+        </p>
+        <p class="form-unit__row">
+          <label class="form-unit__item">
+            <span class="form-unit__label">Телефон:*</span>
+            <input type="text" class="form-unit__input form-unit__input--icon
+            form-unit__input--phone" name="Телефон" placeholder="8 (960) 900-60-90" required>
+          </label>
+        </p>
+      </fieldset>
+      <fieldset class="program-form__group form-unit">
+        <legend class="form-unit__title">Комментарий</legend>
+        <p class="form-unit__row">
+          <label class="form-unit__item">
+            <textarea class="form-unit__textarea" name="Комментарий"
+                      cols="50" rows="5" placeholder="Расскажите обо всех повадках кота"></textarea>
+          </label>
+        </p>
+      </fieldset>
+      <fieldset class="program-form__group form-unit">
+        <legend class="form-unit__title">Дополнительно</legend>
+        <ul class="form-unit__list">
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="checkbox" name="sweetener" class="form-unit__radio visually-hidden" checked>
+              <span class="form-unit__label form-unit__label--radio">Сахарозаменитель</span>
+            </label>
+          </li>
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="checkbox" name="water" class="form-unit__radio visually-hidden">
+              <span class="form-unit__label form-unit__label--radio">Питьевая вода</span>
+            </label>
+          </li>
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="checkbox" name="milk" class="form-unit__radio visually-hidden">
+              <span class="form-unit__label form-unit__label--radio">Молоко</span>
+            </label>
+          </li>
+          <li class="form-unit__list-item">
+            <label class="form-unit__item">
+              <input type="checkbox" name="vitamins" class="form-unit__radio visually-hidden">
+              <span class="form-unit__label form-unit__label--radio">Витамины</span>
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+      <button class="theme-btn">Отправить заявку</button>
+      <p class="program-form__footnote theme-text"><sup>*</sup> — Обязательные поля</p>
     </form>
   </main>
 
