Поправил альтернативный текст картинок и заменил section без заголовков на div.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <body>
 
   <header class="page-header">
-    <img class="page-header__logo-image" src="https://placehold.it/33x38" alt="Logo" width="33" height="38">
+    <img class="page-header__logo-image" src="https://placehold.it/33x38" alt="Супер-кот (лого)" width="33" height="38">
     <a href="index.html" class="logo-title">
       <b>Cat</b> Energy
     </a>
@@ -29,7 +29,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Pro 500 г Курица" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -55,7 +55,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Pro 1000 г Курица" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -81,7 +81,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Pro 500 г Рыба" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -107,7 +107,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Pro 1000 г Рыба" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -133,7 +133,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Slim 500 г Гречка" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -159,7 +159,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Slim 1000 г Гречка" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -185,7 +185,7 @@
       <article class="catalog__item card">
         <div class="card__wrapper product">
           <div class="product__image">
-            <img src="https://placehold.it/140x96" alt="Product" width="140" height="96">
+            <img src="https://placehold.it/140x96" alt="Cat Energy Slim 500 г Рис" width="140" height="96">
           </div>
           <div class="product__content">
             <h3 class="product__name">
@@ -250,13 +250,13 @@
           <a href="#" class="theme-btn">Заказать</a></article>
       </div>
     </section>
-    <section class="gift container">
+    <div class="gift container">
       <div class="gift__icon"></div>
       <p class="gift__text">
         Закажите все <br>
         и получите чехол для кота в подарок!
       </p>
-    </section>
+    </div>
   </main>
 
   <footer class="page-footer">
@@ -274,11 +274,11 @@
     <div class="map"></div>
 
     <div class="container">
-      <section class="page-footer__item">
+      <div class="page-footer__item">
         <a href="index.html" class="logo-title">
           <b>Cat</b> Energy
         </a>
-      </section>
+      </div>
       <section class="page-footer__item socials">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="socials__list">
@@ -297,7 +297,7 @@
         <h2 class="visually-hidden">Правообладатель</h2>
         <a class="rights-owner__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="rights-owner__name">HTML Academy</span>
-          <img class="rights-owner__logo" src="img/htmlacademy.svg" alt="htmlacademy-logo" width="20" height="20">
+          <img class="rights-owner__logo" src="img/htmlacademy.svg" alt="Логотип HTML Academy" width="20" height="20">
         </a>
       </section>
     </div>
