--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body>
 
   <header class="page-header">
-    <img class="page-header__logo-image" src="https://placehold.it/33x38" alt="Logo" width="33" height="38">
+    <img class="page-header__logo-image" src="https://placehold.it/33x38" alt="Супер-кот (лого)" width="33" height="38">
     <a class="logo-title">
       <b>Cat</b> Energy
     </a>
@@ -117,7 +117,7 @@
         <div class="example__comparison slider">
           <div class="slider__images">
             <img class="slider__image slider__image--active" src="https://placehold.it/280x240" width="280" height="240" alt="Толстый кот">
-            <img class="slider__image" src="https://placehold.it/280x240" width="280" height="240" alt="Тощий кот">
+            <img class="slider__image" src="https://placehold.it/280x240" width="280" height="240" alt="Худой кот">
           </div>
           <div class="slider__actions">
             <button class="slider__btn">Было</button>
@@ -144,11 +144,11 @@
     <div class="map"></div>
 
     <div class="container">
-      <section class="page-footer__item">
+      <div class="page-footer__item">
         <a class="logo-title">
           <b>Cat</b> Energy
         </a>
-      </section>
+      </div>
       <section class="page-footer__item socials">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="socials__list">
@@ -167,7 +167,7 @@
         <h2 class="visually-hidden">Правообладатель</h2>
         <a class="rights-owner__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="rights-owner__name">HTML Academy</span>
-          <img class="rights-owner__logo" src="img/htmlacademy.svg" alt="htmlacademy-logo" width="20" height="20">
+          <img class="rights-owner__logo" src="img/htmlacademy.svg" alt="Логотип HTML Academy" width="20" height="20">
         </a>
       </section>
     </div>
