--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <body>
 
   <header class="page-header">
-    <img class="page-header__logo-image" src="https://placehold.it/33x38" alt="Logo" width="33" height="38">
+    <img class="page-header__logo-image" src="https://placehold.it/33x38" alt="Супер-кот (лого)" width="33" height="38">
     <a href="index.html" class="logo-title">
       <b>Cat</b> Energy
     </a>
@@ -147,11 +147,11 @@
     <div class="map"></div>
 
     <div class="container">
-      <section class="page-footer__item">
+      <div class="page-footer__item">
         <a href="index.html" class="logo-title">
           <b>Cat</b> Energy
         </a>
-      </section>
+      </div>
       <section class="page-footer__item socials">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="socials__list">
@@ -170,7 +170,7 @@
         <h2 class="visually-hidden">Правообладатель</h2>
         <a class="rights-owner__link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="rights-owner__name">HTML Academy</span>
-          <img class="rights-owner__logo" src="img/htmlacademy.svg" alt="htmlacademy-logo" width="20" height="20">
+          <img class="rights-owner__logo" src="img/htmlacademy.svg" alt="Логотип HTML Academy" width="20" height="20">
         </a>
       </section>
     </div>
