Добавил Pixel Glass на все страницы для удобства вёрстки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Кэт энерджи - Каталог продукции</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Pixel Glass -->
+    <style>
+      HTML {
+        background-repeat: no-repeat;
+        background-position:  50% 0;
+        /* Mobile layout by default */
+        background-image: url( "layouts/cat-energy-catalog-mobile.jpg" );
+      }
+      /* Tablet */
+      @media ( min-width: 760px ) {
+        HTML {
+          /* Tablet layout */
+          background-image: url( "layouts/cat-energy-catalog-tablet.jpg" );
+        }
+      }
+      /* Desktop */
+      @media ( min-width: 1460px ) {
+        HTML {
+          /* Desktop layout */
+          background-image: url( "layouts/cat-energy-catalog-desktop.jpg" );
+        }
+      }
+    </style>
+    <link href="pixel-glass/styles.css" rel="stylesheet">
+    <script src="pixel-glass/script.js"></script>
+    <!-- // Pixel Glass -->
   </head>
   <body>
 
