Импортировал все блоки в style.scss. Добавил стили theme.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -241,10 +241,10 @@
       </article>
 
       <div class="catalog__item">
-        <div class="catalog__item-wrapper more-goods">
-          <div class="more-goods__icon"></div>
-          <p class="more-goods__title"><b>Показать еще 100500 товаров</b></p>
-          <p class="more-goods__text theme__text">На самом деле вкусов гораздо больше!</p>
+        <div class="catalog__item-wrapper more-products">
+          <div class="more-products__icon"></div>
+          <p class="more-products__title"><b>Показать еще 100500 товаров</b></p>
+          <p class="more-products__text theme__text">На самом деле вкусов гораздо больше!</p>
         </div>
         <a href="#" class="theme__btn theme__btn--ghost">Показать все</a>
       </div>
