--- a/source/index.html
+++ b/source/index.html
@@ -77,7 +77,7 @@
             <span class="program__icon"></span>
             Похудение
           </h3>
-          <p class="program__description.theme__text">
+          <p class="program__description theme__text">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
           <a href="catalog.html" class="program__link">Каталог Slim</a>
@@ -87,7 +87,7 @@
             <span class="program__icon"></span>
             Набор массы
           </h3>
-          <p class="program__description.theme__text">
+          <p class="program__description theme__text">
             Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
           <a href="catalog.html" class="program__link">Каталог Pro</a>
@@ -101,25 +101,25 @@
         <ul class="features__list">
           <li class="features__item feature">
             <div class="feature__icon feature__icon--sleeve"></div>
-            <p class="feature__text.theme__text">
+            <p class="feature__text theme__text">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
           <li class="features__item feature">
             <div class="feature__icon feature__icon--powder"></div>
-            <p class="feature__text.theme__text">
+            <p class="feature__text theme__text">
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
           <li class="features__item feature">
             <div class="feature__icon feature__icon--flatware"></div>
-            <p class="feature__text.theme__text">
+            <p class="feature__text theme__text">
               Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
           <li class="features__item feature">
             <div class="feature__icon feature__icon--clocks"></div>
-            <p class="feature__text.theme__text">
+            <p class="feature__text theme__text">
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
